--- a/default.cfg
+++ b/default.cfg
@@ -8,7 +8,7 @@ bind "w"			"+forward"
 bind "s"			"+back"
 bind "a"			"+moveleft"
 bind "d"			"+moveright"
-bind "SPACE"			"+jump"
+//bind "SPACE"			"+jump"
 bind "CTRL"			"+duck"
 //bind "TAB"			"+showscores"
 bind "'"			"+moveup"
@@ -38,7 +38,7 @@ bind "8"			"slot8"
 bind "9"			"slot9"
 bind "0"			"slot10"
 bind "MWHEELUP"			"invprev"
-bind "MWHEELDOWN"		"invnext"
+//bind "MWHEELDOWN"		"invnext"
 bind "q"			"lastinv"
 bind "F5"			"screenshot"
 bind "F6"			"save_replay"
@@ -65,7 +65,28 @@ bind "n"			"open_charinfo_backpack"
 bind "f"			"inspect"
 bind "j"			"cl_trigger_first_notification"
 
+//reset
+bind "p" "resetmedcfg"
+
+//reset class specific settings
+sensitivity 2 // sniper and spy change this
+fov_desired 90 // sniper and spy change this
+r_drawviewmodel 1 // spy changes this
+
 //custom binds
-alias +sb "+showscores;net_graph 3"
-alias -sb "-showscores;net_graph 0"
+alias +sb "+showscores;net_graph 3;net_graphtext 1"
+alias -sb "-showscores;net_graph 1;net_graphtext 0"
 bind tab +sb
+
+alias "+jumpduck" "+jump; +duck"
+alias "-jumpduck" "-duck; -jump"
+bind "SPACE" "+jumpduck"
+bind "MWHEELDOWN" "+jump"
+
+alias fov70 "fov_desired 70;viewmodel_fov 54; alias cfov fov90"
+alias fov90 "fov_desired 90;viewmodel_fov 70; alias cfov fov70"
+alias cfov fov70
+bind mouse3 cfov
+//notes
+//viewmodel_fov [54-70]
+//fov_desired [70-90]
