--- a/engineer.cfg
+++ b/engineer.cfg
@@ -15,7 +15,7 @@ bind mouse4 "+mouse_4"
 //  _______________
 // | prerequisites |
 //  ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯
-tf_dingalingaling 0
+// tf_dingalingaling 0
 //  _______________
 // | forward spawn |
 //  ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯
