--- a/gfx.cfg
+++ b/gfx.cfg
@@ -1,15 +1,15 @@
 // Unexplained crashes? Try changing mat_queue_mode to `-1'.
 // ----------------------------------------------------------------------------
-// Chris' highframes config, designed to get you a large performance boost
+// Chris' dx9frames config, designed to get you a large performance boost
 // v2.009 | 20 April 2012 | fakkelbrigade.eu/chris/configs/
 // ----------------------------------------------------------------------------
 // Problems or questions? Contact me at #christf2 on QuakeNet.
 // ----------------------------------------------------------------------------
 // Launch options:
-// IMPORTANT: Remove -dxlevel 81 from the launch options after the first launch!
+// IMPORTANT: Remove -dxlevel 90 from the launch options after the first launch!
 //
-// Fullscreen: -dxlevel 81 -full -w WIDTH -h HEIGHT -console -novid -useforcedmparms -noforcemaccel -noforcemspd
-// Windowed:   -dxlevel 81 -sw -w WIDTH -h HEIGHT -console -noborder -novid -useforcedmparms -noforcemaccel -noforcemspd
+// Fullscreen: -dxlevel 90 -full -w WIDTH -h HEIGHT -console -novid -useforcedmparms -noforcemaccel -noforcemspd
+// Windowed:   -dxlevel 90 -sw -w WIDTH -h HEIGHT -console -noborder -novid -useforcedmparms -noforcemaccel -noforcemspd
 // ----------------------------------------------------------------------------
 
 // ----------------------------------------------------------------------------
@@ -31,8 +31,8 @@
 // keep that value stable without regular drops.
 // ----------------------------------------------------------------------------
 cl_showfps 1 // Show unsmoothed FPS meter
-fps_max 132 // Commented due to 2011-09-02 update causing jittering when fps is capped for some
-//fps_max 0
+//fps_max 132 // Commented due to 2011-09-02 update causing jittering when fps is capped for some
+fps_max 0
 
 // ----------------------------------------------------------------------------
 // Net settings
@@ -69,15 +69,15 @@ fps_max 132 // Commented due to 2011-09-02 update causing jittering when fps is 
 //rate 60000
 
 // Good connection
-//cl_cmdrate 66
-//cl_interp 0
-//cl_interp_ratio 1
-//cl_lagcompensation 1
-//cl_pred_optimize 2
-//cl_smooth 0
-//cl_smoothtime 0.01
-//cl_updaterate 66
-//rate 60000
+cl_cmdrate 66
+cl_interp 0
+cl_interp_ratio 1
+cl_lagcompensation 1
+cl_pred_optimize 2
+cl_smooth 0
+cl_smoothtime 0.01
+cl_updaterate 66
+rate 60000
 
 // Bad connection
 //cl_cmdrate 40
@@ -102,8 +102,8 @@ cl_playerspraydisable 1
 r_spray_lifetime 0
 
 // Enable sprays -- uncomment this section if you want these settings
-cl_playerspraydisable 0
-r_spray_lifetime 2
+//cl_playerspraydisable 0
+//r_spray_lifetime 2
 
 // ----------------------------------------------------------------------------
 // Shadows
@@ -157,12 +157,12 @@ g_ragdoll_lvfadespeed 0
 ragdoll_sleepaftertime 0
 
 // Enable ragdolls -- uncomment this section if you want these settings
-cl_ragdoll_fade_time 15
-cl_ragdoll_forcefade 0
-cl_ragdoll_physics_enable 1
-g_ragdoll_fadespeed 600
-g_ragdoll_lvfadespeed 100
-ragdoll_sleepaftertime "5.0f"
+//cl_ragdoll_fade_time 15
+//cl_ragdoll_forcefade 0
+//cl_ragdoll_physics_enable 1
+//g_ragdoll_fadespeed 600
+//g_ragdoll_lvfadespeed 100
+//ragdoll_sleepaftertime "5.0f"
 
 // ----------------------------------------------------------------------------
 // Gibs
@@ -179,12 +179,12 @@ violence_agibs 0
 violence_hgibs 0
 
 // Enable gibs -- uncomment this section if you want these settings
-cl_phys_props_enable 1
-cl_phys_props_max 128
-props_break_max_pieces -1
-r_propsmaxdist 1000
-violence_agibs 1
-violence_hgibs 1
+//cl_phys_props_enable 1
+//cl_phys_props_max 128
+//props_break_max_pieces -1
+//r_propsmaxdist 1000
+//violence_agibs 1
+//violence_hgibs 1
 
 // ----------------------------------------------------------------------------
 // Graphical
@@ -199,10 +199,10 @@ cl_ejectbrass 0
 cl_new_impact_effects 0
 cl_show_splashes 0
 func_break_max_pieces 0
-glow_outline_effect_enable 1 // Cart glow effect.
+glow_outline_effect_enable 0 // Cart glow effect.
 lod_transitiondist 0
 mat_antialias 0
-mat_bumpmap 0 // Controls bumpmapping. Setting this to 0 on dx9 will cause
+mat_bumpmap 1 // Controls bumpmapping. Setting this to 0 on dx9 will cause
               // a strange `shine' effect to appear on all players.
 mat_colcorrection_disableentities 1
 mat_colorcorrection 0
@@ -282,7 +282,7 @@ in_usekeyboardsampletime 0
 mat_clipz 1 // FX card users should set this to 0
 mat_forcehardwaresync 0
 mat_levelflush 1
-m_rawinput 1 // Turn on raw mouse input. Commented out by default due to
+//m_rawinput 1 // Turn on raw mouse input. Commented out by default due to
                // silly incompatibility with the Xfire overlay. You should use
                // it if you can!
 mat_vsync 0 // Turn off vsync to avoid nasty I/O latency.
@@ -353,7 +353,7 @@ cl_forcepreload 1 // Force preloading
 // Print to console
 // ----------------------------------------------------------------------------
 echo "-------------------------------------------------------"
-echo "            Chris' highframes config loaded.            "
+echo "            Chris' dx9frames config loaded.            "
 echo "-------------------------------------------------------"
 echo "Please direct all comments/queries/whatnot to"
 echo "#christf2 on QuakeNet."
