--- a/pyro.cfg
+++ b/pyro.cfg
@@ -1,64 +1,74 @@
-// ----------------------------------------------------------------------------
-// general class cfg [11 September 2011] , based on:
-// Chris' competitive medic config
-// v1.056 | 05 August 2011 | fakkelbrigade.eu/chris/configs/
-// ----------------------------------------------------------------------------
-// ----------------------------------------------------------------------------
-// Binds:
-// M1 = primary weapon
-// M2 = secondary weapon
-// M3 = melee weapon
-// M4 = secondary fire on primary weapon
+  //Intro
+//This script is largely based off of Virus' Viewmodel Adaptation with Quickswitch Support script, found here: http://forums.steampowered.com/forums/showthread.php?t=1591457
+//The main changes I made were:
+  //changed all of the aliases to arbritary names of standardized length
+  //created the _mode commands
+  //replaced binds within aliases with aliases (thanks mreeuwi)
+//These changes are intended to make the script easier to navigate and change, even with minimal scripting knowledge.
+//If you've never scripted before and are using this script, I recommend you look at the examples at the bottom and tweak only the _mode and +_attack commands.
+//The examples are just a few demonstrations. Feel free to apply your innate logic and come up with your own modifications.
+//Questions can be directed towards the thread linked above or my Steam profile (id/2C3C).
+//Cheers, 2C3C
 
-// ----------------------------------------------------------------------------
-// If you want to automatically undo this when changing to another class, put
-// this in the config for that class (obviously uncomment it first)
+  //Base
+bind 1 pri
+bind 2 sec
+bind 3 mel
+bind 4 dis
+bind 5 eng
+bind q switcher
+bind mwheelup s_u
+bind mwheeldown s_d
+bind mouse1 +s_attack
+bind mouse4 +attack2
 
-resetmedcfg
+bind mouse1 "+pri_attack"
+bind mouse2 "+sec_attack"
+bind mouse5 "+mel_attack"
+//bind mouse4 "+2ndatk1"
 
-// (You might want to put it in your autoexec as well, because binds are
-// retained between sessions)
-//
-// alias "resetmedcfg" "unbind "shift";bind "mouse1" "+attack";bind "mouse2" "+attack2";bind "mwheelup" "invprev";bind "mwheeldown" "invnext";unbind "mouse3";unbind "mouse4";bind "C" "voice_menu_3";-forward;echo "*** MEDIC CONFIG UNLOADED ***""
-// resetmedcfg
-//
-// OR
-//
-// bind a key to it in your autoexec only like:
-//
-// alias "resetmedcfg" "unbind "shift";bind "mouse1" "+attack";bind "mouse2" "+attack2";bind "mwheelup" "invprev";bind "mwheeldown" "invnext";unbind "mouse3";unbind "mouse4";bind "C" "voice_menu_3";-forward;echo "*** MEDIC CONFIG UNLOADED ***""
-// bind "p" "resetmedcfg"
-// resetmedcfg
-// ----------------------------------------------------------------------------
+alias pri_mode "r_drawviewmodel 1"
+alias sec_mode "r_drawviewmodel 1"
+alias mel_mode "r_drawviewmodel 1"
 
-resetmedcfg
+alias +pri_attack "slot1;+attack;r_drawviewmodel 1;spec_next"
+alias -pri_attack "-attack;r_drawviewmodel 1" 
+alias +sec_attack "slot2;+attack;r_drawviewmodel 1;spec_next"
+alias -sec_attack "-attack;r_drawviewmodel 1" 
+alias +mel_attack "slot3;+attack;r_drawviewmodel 1;spec_next"
+alias -mel_attack "-attack;r_drawviewmodel 1"
 
-// ----------------------------------------------------------------------------
-// Weapon aliases
-// ----------------------------------------------------------------------------
-alias +atk2 "slot2;+attack"
-alias -atk2 "-attack"
-alias +atk1 "slot1;+attack"
-alias -atk1 "-attack"
-alias +melee "slot3;+attack"
-alias -melee "-attack"
+alias prima "slot1; pri_mode; alias +s_attack +pri_attack; alias -s_attack -pri_attack"
 
-// ----------------------------------------------------------------------------
-// secondary fire
-// ----------------------------------------------------------------------------
-// alias +2ndatk2 "+attack2;slot2;dropitem"
-// alias -2ndatk2 "-attack2"
+alias pri_sec "prima; alias switcher sec_pri; alias pri prima; alias sec sec_pri; alias mel mel_pri; alias dis pda_pri_sec; alias eng pda2_pri_sec; alias s_u mel_pri; alias s_d sec_pri"
+alias pri_mel "prima; alias switcher mel_pri; alias pri prima; alias sec sec_pri; alias mel mel_pri; alias dis pda_pri_mel; alias eng pda2_pri_mel; alias s_u mel_pri; alias s_d sec_pri"
 
-alias +2ndatk1 "+attack2;slot1;dropitem"
-alias -2ndatk1 "-attack2"
+alias secon "slot2; sec_mode; alias +s_attack +sec_attack; alias -s_attack -sec_attack"
 
-// ----------------------------------------------------------------------------
-// Binding
-// ----------------------------------------------------------------------------
-bind mouse1 "+atk1"
-bind mouse2 "+atk2"
-bind mouse5 "+melee"
-bind mouse4 "+2ndatk1"
+alias sec_pri "secon; alias switcher pri_sec; alias pri pri_sec; alias sec secon; alias mel mel_sec; alias dis pda_sec_pri; alias eng pda2_sec_pri; alias s_u pri_sec; alias s_d mel_sec"
+alias sec_mel "secon; alias switcher mel_sec; alias pri pri_sec; alias sec secon; alias mel mel_sec; alias dis pda_sec_mel; alias eng pda2_sec_mel; alias s_u pri_sec; alias s_d mel_sec"
 
-// Print to console
-echo "*** general class cfg ***"
+alias melee "slot3; mel_mode; alias +s_attack +mel_attack; alias -s_attack -mel_attack"
+
+alias mel_pri "melee; alias switcher pri_mel; alias pri pri_mel; alias sec sec_mel; alias mel melee; alias dis pda_mel_pri; alias eng pda2_mel_pri; alias s_u sec_mel; alias s_d pri_mel"
+alias mel_sec "melee; alias switcher sec_mel; alias pri pri_mel; alias sec sec_mel; alias mel melee; alias dis pda_mel_sec; alias eng pda2_mel_sec; alias s_u sec_mel; alias s_d pri_mel"
+
+alias pda   "slot4"
+
+alias pda_pri_sec "pda; alias switcher pri_sec"
+alias pda_pri_mel "pda; alias switcher pri_mel"
+alias pda_sec_pri "pda; alias switcher sec_pri"
+alias pda_sec_mel "pda; alias switcher sec_mel"
+alias pda_mel_pri "pda; alias switcher mel_pri"
+alias pda_mel_sec "pda; alias switcher mel_sec"
+
+alias pda2  "slot5"
+
+alias pda2_pri_sec "pda2; alias switcher pri_sec"
+alias pda2_pri_mel "pda2; alias switcher pri_mel"
+alias pda2_sec_pri "pda2; alias switcher sec_pri"
+alias pda2_sec_mel "pda2; alias switcher sec_mel"
+alias pda2_mel_pri "pda2; alias switcher mel_pri"
+alias pda2_mel_sec "pda2; alias switcher mel_sec"
+
+pri_sec
