updated binds for esdf movement and move class configs to user directory

--- a/cfg/user/medic.cfg
+++ b/cfg/user/medic.cfg
@@ -1,3 +1,6 @@
+// mastercomfig network
+net_projectiles
+
 // ----------------------------------------------------------------------------
 // Chris' competitive medic config
 // v1.056 | 05 August 2011 | fakkelbrigade.eu/chris/configs/
