removed variable sensitivity

--- a/cfg/user/sniper.cfg
+++ b/cfg/user/sniper.cfg
@@ -22,9 +22,9 @@ bind mwheeldown s_d
 bind mouse1 +s_attack
 bind mouse2 +attack2
 
-alias pri_mode "r_drawviewmodel 1"\\; sensitivity 0.909"
-alias sec_mode "r_drawviewmodel 1"\\; sensitivity 0.909"
-alias mel_mode "r_drawviewmodel 1"\\; sensitivity 0.909"
+alias pri_mode "r_drawviewmodel 1"//; sensitivity 0.909"
+alias sec_mode "r_drawviewmodel 1"//; sensitivity 0.909"
+alias mel_mode "r_drawviewmodel 1"//; sensitivity 0.909"
 
 alias +pri_attack "+attack;r_drawviewmodel 1;spec_next"
 alias -pri_attack "-attack;r_drawviewmodel 1" 
