update fps and netgraph settings

--- a/cfg/user/autoexec.cfg
+++ b/cfg/user/autoexec.cfg
@@ -30,7 +30,7 @@ host_thread_mode 0
 
 //additional settings
 
-cl_showfps 2 // Show smoothed FPS meter
+cl_showfps 0 // Show smoothed FPS meter. i just use netgraph now
 
 // Force shadows on
 mat_shadowstate "1"
@@ -145,7 +145,9 @@ alias morenet "rate 30000;cl_cmdrate 66;cl_interp 0.02;cl_lagcompensation 1;cl_u
 // mat_trilinear 1 // Use Trilinear Mode (more system-intensive)
 // mat_forceaniso # // Use Trilinear Mode (where # is 2, 4, 8, or 16 - higher levels of filtering require more system resources)
 // mat_hdr_level # // Adjusts High Dynamic Range lighting effects where # is 0 for "off" (requires least resources) and 2 for "full"
-mat_viewportupscale 1
-mat_viewportscale 0.8 //lowers internal render resolution
+//mat_viewportupscale 1
+//mat_viewportscale 0.8 //lowers internal render resolution
+						//ive found that this actually makes no difference on fps
+//fps_max 241 //mastercomfig sets this 
 
 exec user/binds.cfg
