--- a/cfg/user/modules.cfg
+++ b/cfg/user/modules.cfg
@@ -2,12 +2,17 @@ ragdolls=medium
 move_bind=esdf
 //fpscap=240
 fpscap=300
-//lod=low
+ 
+// https://docs.mastercomfig.com/en/latest/customization/modules/#graphics-modules
+lod=low // model detail
 //lighting=very_low
-//lighting_ex=low
+//lighting_ex=low //controls phong
+//shadows=high
 aa=off
 aa_msaa=off
 //textures=low
+//texture_filter=aniso4x
+characters=medium_high
 //water=medium
 //effects=low
 //particles=low
