added crosshair settings

--- a/cfg/user/autoexec.cfg
+++ b/cfg/user/autoexec.cfg
@@ -92,7 +92,21 @@ tf_use_min_viewmodels "1" // (default 0) Use minimized viewmodels
 cl_notifications_show_ingame 0 // (default 1) dont show ingame notifications (trading, etc)
 
 //more cvars
-fov_desired 90
+//https://themetalmuncher.github.io/fov-calc/
+// source engine fov is vertical 4:3
+//fov_desired 90
+fov_desired 87 // this matches 103 horizontal like overwatch
+// https://www.teamfortress.tv/35467/on-the-correct-value-of-zoom-sensitivity-ratio
+// https://www.wolframalpha.com/input/?i=%2887%C2%B0%2F20%C2%B0%29*tan%2820%C2%B0%2F2%29*cotan%2887%C2%B0%2F2%29
+//zoom_sensitivity_ratio 0.8083
+zoom_sensitivity_ratio 0.80475
+
+cl_crosshair_file crosshair1
+cl_crosshair_red 0
+cl_crosshair_green 255
+cl_crosshair_blue 0
+cl_crosshair_scale 20 // (default 32)
+
 tf_medieval_thirdperson 1 // thirdperson mode in medival matches
 
 cl_ask_blacklist_opt_out 0 // dont ask to blacklist servers after quitting
