update spy binds

--- a/cfg/user/spy.cfg
+++ b/cfg/user/spy.cfg
@@ -26,12 +26,15 @@ bind mwheeldown s_d
 bind mouse1 +s_attack
 bind mouse2 +watch // was +attack2
 
-alias pri_mode "r_drawviewmodel 0 sensitivity 2;fov_desired 70;-attack"
-alias sec_mode "r_drawviewmodel 1; sensitivity 3;fov_desired 90;+attack"
-alias mel_mode "r_drawviewmodel 1; sensitivity 3;fov_desired 90;-attack"
+//alias pri_mode "r_drawviewmodel 1; sensitivity 2;fov_desired 75;-attack" //75 is the minimum fov
+//alias sec_mode "r_drawviewmodel 1; sensitivity 3;fov_desired 90;+attack"
+//alias mel_mode "r_drawviewmodel 1; sensitivity 3;fov_desired 90;-attack"
+alias pri_mode "r_drawviewmodel 1; -attack"
+alias sec_mode "r_drawviewmodel 1; +attack"
+alias mel_mode "r_drawviewmodel 1; -attack"
 
-alias +pri_attack "+attack;r_drawviewmodel 0;spec_next"
-alias -pri_attack "-attack;r_drawviewmodel 0" 
+alias +pri_attack "+attack;r_drawviewmodel 1;spec_next"
+alias -pri_attack "-attack;r_drawviewmodel 1" 
 alias +sec_attack "+attack;r_drawviewmodel 1;spec_next"
 alias -sec_attack "-attack;r_drawviewmodel 1" 
 alias +mel_attack "+attack;r_drawviewmodel 1;spec_next"
