--- a/cfg/user/autoexec.cfg
+++ b/cfg/user/autoexec.cfg
@@ -100,6 +100,7 @@ fov_desired 87 // this matches 103 horizontal like overwatch
 // https://www.wolframalpha.com/input/?i=%2887%C2%B0%2F20%C2%B0%29*tan%2820%C2%B0%2F2%29*cotan%2887%C2%B0%2F2%29
 //zoom_sensitivity_ratio 0.8083
 zoom_sensitivity_ratio 0.80475
+m_rawinput 1
 
 cl_crosshair_file crosshair1
 cl_crosshair_red 0
