update launch options

--- a/cfg/user/autoexec.cfg
+++ b/cfg/user/autoexec.cfg
@@ -1,22 +1,9 @@
 // toms autoexec
-// [3/27/2018]
-// IMPORTANT: Remove -dxlevel 90 from the launch options after the first launch!
-// Fullscreen: -dxlevel 90 -full -w WIDTH -h HEIGHT -console -novid -useforcedmparms -noforcemaccel -noforcemspd -nojoy
-// Windowed:   -dxlevel 90 -sw -w WIDTH -h HEIGHT -console -noborder -novid -useforcedmparms -noforcemaccel -noforcemspd -nojoy
+// [4/3/2021]
 
-// first -dxlevel 90 -sw -w WIDTH -h HEIGHT -console -noborder -novid -useforcedmparms -noforcemaccel -noforcemspd -nojoy -nosteamcontroller -noff -softparticlesdefaultoff -reuse
-// then -sw -console -noborder -novid -useforcedmparms -noforcemaccel -noforcemspd -nojoy -nosteamcontroller -noff -softparticlesdefaultoff -reuse
-// launch options
-// -novid : disables valve startup logo
-// -nojoy : stops joystick system from starting up
-// -nosteamcontroller : disable steam controller system
-// -noff : disables rumble system
-// -nohltv : disables sourcetv
-// -softparticlesdefaultoff : disable depth blending for particles and sprites, more FPS
-// -reuse: allow network sockets to be reused when busy (sets SO_REUSEADDR), better network performance
-// -primarysound : always use a direct hardware sound buffer
-// -snoforceformat : do not set the hardware sound format
-// -swapcores : sets the material system thread to use the 2nd thread and server threadt to use the 1st
+// LAUNCH OPTIONS
+// https://docs.mastercomfig.com/en/latest/customization/launch_options/
+// -noborder -novid -nojoy -nosteamcontroller -nohltv -particles 1 -precachefontchars
 
 // ----------------------------------------------------------------------------
 // graphics settings (chris config)
