corrected anti-aliasing module

--- a/cfg/user/modules.cfg
+++ b/cfg/user/modules.cfg
@@ -8,8 +8,7 @@ lod=low // model detail
 //lighting=very_low
 //lighting_ex=low //controls phong
 //shadows=high
-aa=off
-aa_msaa=off
+anti_aliasing=off
 //textures=low
 //texture_filter=aniso4x
 characters=medium_high
