added pre_comfig to handle initial video settings

--- a/cfg/user/autoexec.cfg
+++ b/cfg/user/autoexec.cfg
@@ -8,8 +8,8 @@
 // ----------------------------------------------------------------------------
 // graphics settings (chris config)
 // ----------------------------------------------------------------------------
-//used to use chrisconfig back in the day. now i use mastercomfig
-//exec gfx.cfg
+// HANDLED IN pre_comfig.cfg
+
 
 //this fucks up listen server player shooting in mastercomfig so we just change it back
 host_thread_mode 0
