--- a/cfg/user/autoexec.cfg
+++ b/cfg/user/autoexec.cfg
@@ -68,6 +68,7 @@ resetmedcfg
 cl_autoreload 1 // (default 0) Automatically reload weapons when you're not firing
 hud_fastswitch 1 // (default 0) Fast weapon switch	
 tf_dingalingaling 1 // (default 0) Play a hit sound every time you injure an enemy	
+tf_dingalingaling_lasthit 1 // has separate killsound
 hud_combattext 1 // (default 0) Display damage done as text over your target
 hud_combattext_healing 1 // (default 0)  turns the healed text above teammates on
 hud_combattext_doesnt_block_overhead_text "1" // If set, damage text won't prevent bonus-effect text from appearing above players' heads as well. (e.g. "CRIT!")	
