added shift mask for building. reorganized aliases and binds.

--- a/cfg/user/engineer.cfg
+++ b/cfg/user/engineer.cfg
@@ -3,34 +3,24 @@ resetmedcfg
 // mastercomfig network
 net_hitscan
 
-alias eng_mainbinds bind 1 "sentry";bind 2 "dispenser";bind 3 "entrance";bind 4 "exit";bind mouse1 "+mouse_1";bind mouse2 "+mouse_3";bind mouse5 "+melee";bind mouse4 "+mouse_4"
-eng_mainbinds
 
-//  ______________
-// | engineer.cfg |
-//  ¯¯¯¯¯¯¯¯¯¯¯¯¯¯
-//  _______________
-// | prerequisites |
-//  ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯
-// tf_dingalingaling 0
-//  _______________
 // | forward spawn |
-//  ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯
+//  ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 alias forward_spawn_toggle "forward_spawn_random"
 alias forward_spawn_random "join_class random; bind f1 forward_spawn_engineer"
 alias forward_spawn_engineer "join_class engineer; bind f1 forward_spawn_toggle; say_team *** moved spawn ***"
-//  ______________
-// | bind aliases |
-//  ¯¯¯¯¯¯¯¯¯¯¯¯¯¯
-//alias sentry "destroy 2; build 2; bind mouse5 +eng_confirm"
-//alias dispenser "destroy 0; build 0; bind mouse5 +eng_confirm"
-//alias entrance "destroy 1; build 1; bind mouse5 +eng_confirm"
-//alias exit "destroy 3; build 3; bind mouse5 +eng_confirm"
 
+// i kept accidentally destroying my stuff with the quick build aliases so this will make it so that shift has a mask on it
 alias sentry "build 2; bind mouse5 +eng_confirm"
-alias dispenser "destroy 0; build 0; bind mouse5 +eng_confirm"
-alias entrance "destroy 1; build 1; bind mouse5 +eng_confirm"
-alias exit "destroy 3; build 3; bind mouse5 +eng_confirm"
+alias dispenser "build 0; bind mouse5 +eng_confirm"
+alias entrance "build 1; bind mouse5 +eng_confirm"
+alias exit "build 3; bind mouse5 +eng_confirm"
+alias shift_sentry "destroy 2; build 2; bind mouse5 +eng_confirm"
+alias shift_dispenser "destroy 0; build 0; bind mouse5 +eng_confirm"
+alias shift_entrance "destroy 1; build 1; bind mouse5 +eng_confirm"
+alias shift_exit "destroy 3; build 3; bind mouse5 +eng_confirm"
+alias "+shiftmask" "+duck; +toggleTeleport; bind 1 shift_sentry; bind 2 shift_dispenser; bind 3 shift_entrance; bind 4 shift_exit"
+alias "-shiftmask" "-duck; -toggleTeleport; bind 1 sentry; bind 2 dispenser; bind 3 entrance; bind 4 exit"
 
 alias +eng_confirm "+attack"
 alias -eng_confirm "-attack;bind mouse5 +mouse_2"
@@ -54,10 +44,22 @@ alias +mouse_5 "none"
 alias -mouse_5 "none"
 //  ________________
 // | weapon aliases |
-//  ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯
+//  ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 alias +melee "slot3; +attack"
 alias -melee "-attack"
 alias +primary "slot1; +attack"
 alias -primary "-attack"
 alias +secondary "slot2; +attack"
 alias -secondary "-attack"
+
+// BINDS
+bind 1 "sentry"
+bind 2 "dispenser"
+bind 3 "entrance"
+bind 4 "exit"
+bind mouse1 "+primary"
+bind mouse2 "+secondary"
+bind mouse5 "+melee"
+bind mouse4 "+attack2" //secondary attack used to rotate buildings
+
+bind shift "+shiftmask"
