added eureka teleport bind

--- a/cfg/user/engineer.cfg
+++ b/cfg/user/engineer.cfg
@@ -22,16 +22,21 @@ alias shift_exit "destroy 3; build 3; bind mouse5 +eng_confirm"
 alias "+shiftmask" "+duck; +toggleTeleport; bind 1 shift_sentry; bind 2 shift_dispenser; bind 3 shift_entrance; bind 4 shift_exit"
 alias "-shiftmask" "-duck; -toggleTeleport; bind 1 sentry; bind 2 dispenser; bind 3 entrance; bind 4 exit"
 
+/////////////////////////////////////////////////////
+// SolarLight's Eureka Effect Fast Teleport Script //
+/////////////////////////////////////////////////////
+bind b +teleport
+alias +teleport slot3
+alias -teleport Teleport_To_Spawn
+alias Teleport_To_Spawn "eureka_teleport"
+alias Teleport_To_Exit "eureka_teleport 1"
+alias +toggleTeleport "alias -teleport Teleport_To_Exit"
+alias -toggleTeleport "alias -teleport Teleport_To_Spawn"
+// The player will see "Unknown command eureka_teleport" in their console even though the command works.
+// https://wiki.teamfortress.com/wiki/Scripting#Eureka_Teleport
+
 alias +eng_confirm "+attack"
 alias -eng_confirm "-attack;bind mouse5 +mouse_2"
-alias key_5 "none"
-alias key_6 "none"
-alias key_7 "none"
-alias key_8 "none"
-alias key_9 "none"
-alias key_0 "none"
-alias key_- "none"
-alias key_= "none"
 alias +mouse_1 "+primary"
 alias -mouse_1 "-primary"
 alias +mouse_2 "+melee"
