update network settings

--- a/cfg/user/autoexec.cfg
+++ b/cfg/user/autoexec.cfg
@@ -128,13 +128,7 @@ alias -sb "-showscores;net_graph 1;net_graphtext 0;timeleft"
 bind tab +sb
 
 // NETWORK SETTINGS
-// recent changes in chris config suggest that lannet is pretty glitchy, so keep away from it
-//alias lannet "cl_cmdrate 66;cl_interp 0;cl_interp_ratio 0;cl_lagcompensation 0;cl_pred_optimize 2;cl_smooth 0;cl_smoothtime 0.01;cl_updaterate 66;rate 60000;echo LAN_enabled"
-alias goodnet "cl_cmdrate 66;cl_interp 0;cl_interp_ratio 1;cl_lagcompensation 1;cl_pred_optimize 2;cl_smooth 0;cl_smoothtime 0.01;cl_updaterate 66;rate 60000;echo goodnet_enabled"
-alias badnet "cl_cmdrate 40;cl_interp 0;cl_interp_ratio 2;cl_lagcompensation 1;cl_pred_optimize 2;cl_smooth 0;cl_smoothtime 0.01;cl_updaterate 40;rate 35000;echo badnet_enabled"
-alias morenet "rate 30000;cl_cmdrate 66;cl_interp 0.02;cl_lagcompensation 1;cl_updaterate 66;cl_smooth 0;cl_smoothtime 0.01;cl_interp_threadmodeticks 0;cl_pred_optimize 2;cl_interp_ratio 1;echo morenet_enabled"
-//goodnet
-
+//this is handeld by mastercomfig now
 
 //in game video settings (to override chris config)
 // r_rootlod # // Adjusts Model Detail where # is 0 for high, 1 is medium, and 2 for low
