update per class network settings

--- a/cfg/user/demoman.cfg
+++ b/cfg/user/demoman.cfg
@@ -1,11 +1,11 @@
 resetmedcfg
 
 // mastercomfig network
-net_projectiles
+//net_projectiles
 
 //  ______________
 // | bind aliases |
-//  ¯¯¯¯¯¯¯¯¯¯¯¯¯¯
+//  ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 alias +mouse_1 "+secondary"
 alias -mouse_1 "-secondary"
 alias +mouse_2 "+melee"
@@ -17,7 +17,7 @@ alias -mouse_4 "-attack2"
 
 //  ________________
 // | weapon aliases |
-//  ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯
+//  ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 alias +melee "slot3; +attack"
 alias -melee "-attack"
 alias +primary "slot1; +attack"
