--- a/cfg/user/medic.cfg
+++ b/cfg/user/medic.cfg
@@ -1,5 +1,5 @@
 // mastercomfig network
-net_projectiles
+//net_projectiles
 
 // ----------------------------------------------------------------------------
 // Chris' competitive medic config
