--- a/cfg/user/pyro.cfg
+++ b/cfg/user/pyro.cfg
@@ -1,5 +1,5 @@
 // mastercomfig network
-net_projectiles
+//net_projectiles
 
 //Intro
 //This script is largely based off of Virus' Viewmodel Adaptation with Quickswitch Support script, found here: http://forums.steampowered.com/forums/showthread.php?t=1591457
