--- a/cfg/user/sniper.cfg
+++ b/cfg/user/sniper.cfg
@@ -1,7 +1,7 @@
 resetmedcfg
 
 // mastercomfig network
-net_hitscan
+//net_hitscan
 
 //based off my spy config (see spy config to see what spy config is based off of)
 
