--- a/cfg/user/spy.cfg
+++ b/cfg/user/spy.cfg
@@ -1,6 +1,6 @@
 resetmedcfg
 // mastercomfig network
-net_spy
+//net_spy
 
 //Intro
 //This script is largely based off of Virus' Viewmodel Adaptation with Quickswitch Support script, found here: http://forums.steampowered.com/forums/showthread.php?t=1591457
