--- a/cfg/user/scout.cfg
+++ b/cfg/user/scout.cfg
@@ -1,5 +1,5 @@
 // mastercomfig network
-net_hitscan
+//net_hitscan
 
 // ----------------------------------------------------------------------------
 // general class cfg [11 September 2011] , based on:
@@ -63,30 +63,6 @@ bind mouse2 "+atk2"
 bind mouse5 "+melee"
 bind mouse4 "+2ndatk1"
 
-//
-//additional things
-//
-// Null-cancelling movement script
-// (prevents you from pressing two opposing directions, which causes you to stop moving)
-
-// bind w +mfwd
-// bind s +mback
-// bind a +mleft
-// bind d +mright
-
-alias +mfwd "-back;+forward;alias checkfwd +forward"
-alias +mback "-forward;+back;alias checkback +back"
-alias +mleft "-moveright;+moveleft;alias checkleft +moveleft"
-alias +mright "-moveleft;+moveright;alias checkright +moveright"
-alias -mfwd "-forward;checkback;alias checkfwd none"
-alias -mback "-back;checkfwd;alias checkback none"
-alias -mleft "-moveleft;checkright;alias checkleft none"
-alias -mright "-moveright;checkleft;alias checkright none"
-alias checkfwd none
-alias checkback none
-alias checkleft none
-alias checkright none
-alias none ""
 
 // Print to console
 echo "*** general class cfg ***"
