update graphics settings

--- a/cfg/user/modules.cfg
+++ b/cfg/user/modules.cfg
@@ -1,18 +1,29 @@
-ragdolls=medium
 move_bind=esdf
 //fpscap=240
-fpscap=300
+fpscap=300 // usually i want fps=refreshrate+1 but mastercomfig only has 240 or 300, so just pick 300
  
 // https://docs.mastercomfig.com/en/latest/customization/modules/#graphics-modules
-lod=low // model detail
 //lighting=very_low
-//lighting_ex=low //controls phong
+lighting_ex=low //low=phong off, high=phong on
 //shadows=high
-anti_aliasing=off
 //textures=low
 //texture_filter=aniso4x
-characters=medium_high
 //water=medium
 //effects=low
 //particles=low
-//post_processing=low
+
+// settings i pretty much always prefer
+lod=low // model detail. lower quality never bothered me too much
+characters=medium_high // facial animations. gives tf2 a little bit extra flavor
+anti_aliasing=off // a little extra boost in the fps
+sprays=on //allow player sprays
+post_processing=low //color correction. gives tf2 that color i like
+effects=medium // medium or higher enables first person tracers. not super important but it lets me know when im critting
+
+//video settings test
+ragdolls=off // no ragdolls so i dont waste time shooting dead players. use medium or high to have regular ragdolls
+
+//testing
+opengl=skip // skip opengl optimizations. since we use directx we can skip this
+outlines=high
+logo=off // mastercomfig logo in console. dont think this matters but it might
