--- a/cfg/user/pre_comfig.cfg
+++ b/cfg/user/pre_comfig.cfg
@@ -6,8 +6,10 @@
 mat_dxlevel 100  // 100 to autodetect based on hardware
 
 // RESOLUTION SETTINGS
-mat_setvideomode 1920 1080 1 //set 1920x1080 windowed
+// mat_setvideomode 1920 1080 1 //set 1920x1080 windowed
+mat_setvideomode 1920 1080 0 //set 1920x1080 fullscreen
 
 // MASTERCOMFIG PRESET
 // https://docs.mastercomfig.com/en/latest/customization/custom_configs/#changing-your-preset
 //preset=medium-high // if you want to change to something else
+preset=medium-low
