--- a/cfg/user/autoexec.cfg
+++ b/cfg/user/autoexec.cfg
@@ -11,45 +11,14 @@
 // HANDLED IN pre_comfig.cfg
 
 
-//this fucks up listen server player shooting in mastercomfig so we just change it back
+//this fucks up listen server player shooting if set to 1 or 2
+// https://www.teamfortress.tv/19959/host-thread-mode
 host_thread_mode 0
 
 
 //additional settings
 
 cl_showfps 0 // Show smoothed FPS meter. i just use netgraph now
-
-// Force shadows on
-mat_shadowstate "1"
-r_shadowmaxrendered "128"
-r_shadowrendertotexture "1"
-r_shadows "1"
-
-// Force sprays on
-cl_playerspraydisable "0"
-r_decals "200"
-r_spray_lifetime "2"
-
-// Force ragdolls on
-//cl_ragdoll_fade_time "15"
-//cl_ragdoll_forcefade "0"
-//cl_ragdoll_physics_enable "1"
-//g_ragdoll_fadespeed "600"
-//g_ragdoll_lvfadespeed "100"
-//ragdoll_sleepaftertime "5.0f"
-
-// Force giblets on
-//cl_phys_props_enable "1"
-//cl_phys_props_max "128"
-//props_break_max_pieces "-1"
-//r_propsmaxdist "1000"
-//violence_ablood "1"
-//violence_agibs "1"
-//violence_hblood "1"
-//violence_hgibs "1"
-
-
-
 
 
 //unbindings for class configs
@@ -83,13 +52,15 @@ cl_notifications_show_ingame 0 // (default 1) dont show ingame notifications (tr
 //https://themetalmuncher.github.io/fov-calc/
 // source engine fov is vertical 4:3
 //fov_desired 90
-fov_desired 87 // this matches 103 horizontal like overwatch
+//fov_desired 87 // this matches 103 horizontal like overwatch
 // https://www.teamfortress.tv/35467/on-the-correct-value-of-zoom-sensitivity-ratio
 // https://www.wolframalpha.com/input/?i=%2887%C2%B0%2F20%C2%B0%29*tan%2820%C2%B0%2F2%29*cotan%2887%C2%B0%2F2%29
 //zoom_sensitivity_ratio 0.8083
-zoom_sensitivity_ratio 0.80475
+//zoom_sensitivity_ratio 0.80475
+zoom_sensitivity_ratio 0.793471
 m_rawinput 1
 
+crosshair 0 // set this to 0 if using custom crosshair (ie budhud)
 cl_crosshair_file crosshair1
 cl_crosshair_red 0
 cl_crosshair_green 255
@@ -112,8 +83,8 @@ tf_sniper_fullcharge_bell "1" //If set, the Sniper Rifle will automatically play
 
 
 //netgraph settings
-//net_graph 3
-//net_graphpos 3 // (default 1) 1=right 2=mid 3=left
+net_graph 1
+net_graphpos 1 // (default 1) 1=right 2=mid 3=left
 net_graphproportionalfont 0 // (default 1) a value of 1 will scale the font larger
 net_graphheight 871 // (default 64) the netgraph has a pixel height of about 29 pixels to the very bottom of the graph display. use your resolution-29 pixels to get only the text to show in the top
 net_graphheight 1051
@@ -121,11 +92,6 @@ net_scale "1000";				// Reduces the sizes of the netgraph bars. (Default: 5)
 net_graphshowlatency "0";		// Disables displaying of the latency graph. (Default: 1)
 net_graphshowinterp "0";		// Disables displaying of the interpolation graph. (Default: 1)
 
-//scoreboard with netgraph
-unbind tab
-alias +sb "+showscores;net_graph 3;net_graphtext 1"
-alias -sb "-showscores;net_graph 1;net_graphtext 0;timeleft"
-bind tab +sb
 
 // NETWORK SETTINGS
 //this is handeld by mastercomfig now
@@ -148,3 +114,8 @@ bind tab +sb
 //fps_max 241 //mastercomfig sets this 
 
 exec user/binds.cfg
+
+// OTHER ALIASES
+// fixes invisible weapon bug
+// https://wiki.teamfortress.com/wiki/Glitches#Inconsistency_bugs
+alias fixweapons "record demo; stop"
